--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
              <h2>Learning AI Incubator</h2>
              
               <div class="wrapperBut" onclick="window.location.href='#'">
-                <button onclick="scrollToSection('mainScreen')">Learn More</button>
+                <button onclick="scrollToSection('sectionOne')">Learn More</button>
                 </div>
             </div>
              </div>
